[package]
name = "pllr"
version = "0.1.0"
edition = "2021"
authors = ["leakypixel <hi@leakypixel.net>"]
repository = "https://github.com/leakypixel/pllr"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2"
fs_extra = "1.3"
